--- a/games/business-cards/www/manifest.json
+++ b/games/business-cards/www/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest": [
-    { "id": "card_1", "src": "img/card_1.png" },
-    { "id": "card_2", "src": "img/card_2.png" },
-    { "id": "card_3", "src": "img/card_3.png" },
+    { "id": "card_1", "src": "img/card_1.png", "front":"true"},
+    { "id": "card_2", "src": "img/card_2.png", "front":"true" },
+    { "id": "card_3", "src": "img/card_3.png", "front":"true" },
     { "id": "card_image_1", "src": "img/card_image_1.png", "back":"true"},
     { "id": "card_image_2", "src": "img/card_image_2.png", "back":"true" },
     { "id": "card_image_3", "src": "img/card_image_3.png", "back":"true" },
@@ -11,9 +11,6 @@
     { "id": "card_image_6", "src": "img/card_image_6.png", "back":"true" },
     { "id": "card_image_7", "src": "img/card_image_7.png", "back":"true" },
     { "id": "card_image_8", "src": "img/card_image_8.png", "back":"true" },
-    { "id": "card_image_9", "src": "img/card_image_9.png", "back":"true" },
-    { "id": "card_image_10", "src": "img/card_image_10.png", "back":"true" },
-    { "id": "card_image_11", "src": "img/card_image_11.png", "back":"true" },
     { "id": "end_graphic_1", "src": "img/end_graphic_1.jpg", "end":"true" },
     { "id": "end_graphic_2", "src": "img/end_graphic_2.jpg", "end":"true" },
     { "id": "end_graphic_3", "src": "img/end_graphic_3.jpg", "end":"true" }
